<resources>
    <string name="donateTitle">Welcome</string>
    <string name="donateSubtitle">Please give generously</string>
    <string name="donateButton">Donate</string>
    <string name="PayPal">PayPal</string>
    <string name="Direct">Direct</string>
    <string name="Total">Total: </string>
    <string name="menuSettings">Settings</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="signUp">Sign-Up</string>
    <string name="login">Login</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <!--<string name="password">Password</string>-->
    <string name="menuLogout">Logout</string>
    <string name="menuDonate">Donate</string>

    <string name="app_name">Donation</string>
    <string name="hello_world">Hello World!</string>
    <string name="geolocation_hint">52.253456,-7.187162</string>
    <string name="registration_date" />
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="isrented">Rented?</string>
    <string name="not_registered">Not registered?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="new_residence">New Residence</string>
    <string name="settings">Settings</string>

    <string name="landlord">Prospective Tenant</string>
    <string name="residence_report">Send Residence Information</string>

    <string name="residence_report_rented">The residence is already let.</string>
    <string name="residence_report_not_rented">The residence is still available.</string>
    <string name="residence_report_nobody_interested">There is no other prospective tenant at this time.</string>
    <string name="residence_report_prospective_tenant">The prospective tenant is %s.</string>
    <string name="residence_report_subject">Status Report on Residence Availability</string>
    <string name="send_report">Send residence report via</string>
    <string name="delete_residence">Delete Residence</string>

    <string name="username_summary">Please enter your user name</string>
    <string name="username">Username</string>
    <string name="password_summary">You may set your password here</string>
    <string name="password">Password</string>
    <string name="nmr_residences">Configure Downloads</string>
    <string name="nmr_residences_summary">How many Residences to store locally?</string>
    <string name="set_refresh_interval">Refresh</string>
    <string name="set_refresh_interval_summary">Frequency of cloud updates (minutes)</string>
</resources>
