<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/geolocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/geolocation_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" >
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        style="?android:listSeparatorTextViewStyle"/>

    <Button
        android:id="@+id/registration_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <CheckBox
        android:id="@+id/isrented"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isrented"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:checked="false"/>

    <Button
        android:id="@+id/tenant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/landlord" />

    <Button android:id="@+id/residence_reportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/residence_report"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_blue_marker"/>

</LinearLayout>